css container fix + collapsed menu fix

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -559,11 +559,29 @@ body{
         font-size: 50px;
         margin-top: 1em;
     }
+
+    .container{
+        padding-left: 0px;
+        padding-right: 0px;
+        width: 90%;
+    }
+
+    .collapsing, .in {background-color: #f7f7f7;}
+    .collapsing ul li a, .in ul li a {color: #555!important;}
+    .collapsing ul li a:hover, .in ul li a:hover {color: #000000!important;}
+    .collapsing ul li a:hover, .in ul li a:hover { border-bottom: 1px solid #000000!important;}
 }
 
 @media (max-width: 690px){
     .close-btn{
         right: 10px;
+    }
+
+}
+
+@media (max-width: 571px){
+    .container{
+        width: 85%;
     }
 
 }
